@@ -4,6 +4,9 @@ History of this buildout
 5.1.14 (unreleased)
 -------------------
 
+- Add year select widget
+  [coen]
+
 - Add cunstom template for advice preview in faceted navigation.
   [coen, maurits]
 
